# pdf-editor-ra

./: .coverage  .gitignore  CLAUDE.md  Dockerfile  README.md  USAGE.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: FileDropzone.tsx  OperationResult.tsx
frontend/src/hooks/: useOperation.ts
frontend/src/operations/: ConvertOperation.tsx  MergeOperation.tsx  OrderOperation.tsx  RotateOperation.tsx
frontend/src/test/: App.test.tsx  FileDropzone.test.tsx  OperationResult.test.tsx  setup.ts  useOperation.test.ts
src/pdf_editor/: __init__.py  __main__.py  _serve.py  cli.py  pdf_operations.py
src/pdf_editor/api/: app.py  routes.py
tests/: test_api.py  test_cli.py  test_pdf_operations.py  test_simple.py
