[project]
name = "pdf-editor"
version = "0.1.0"
description = "A command-line tool for rotating, merging, and converting PDF files"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pypdf>=4.0.0",
    "pdf2docx>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
pdf-editor = "pdf_editor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args}"
test-cov = "pytest --cov=src.pdf_editor --cov-report=term-missing {args}"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_editor"]
